adjusted media screen for laptop

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
                 </div>
             </form>
             
-            <div>
-                <div class="footer"> [ A healthy BMI ranges between 19 and 25]
-                </div>
+            <p class="footer">[ A healthy BMI ranges between 19 and 25]</p>
+            <!-- <div>
+                <!-- <div class="footer"> [ A healthy BMI ranges between 19 and 25]
+                </div> --> 
+
              <section class="moreinfo">
                     <section class="BMIcategories">BMI categories</section>
                     <p>Underweight= lower 18.5 </p>
