Updated the mistakes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <div class="header"> BMI calculator</div>    
-            <form class="card" action="javascript:getBMIresults()">
+            <form class="card" action="javascript:getBMIresult()">
                 <div class="form-group">
                     <label for="height" >Height (CM):</label>
                     <input type="number" step="0.01" name="height" id="cm" class="input">
